modification of sign-in page layout issue

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -56,6 +56,8 @@
   font-weight: lighter;
   color: black;
   font-size:x-small;
+  position: absolute;
+  margin-top: -10px;
 }
 
 .external-login {
